* Added russian localization, thanks GodHybrid!