@@ -1,9 +1,9 @@
-en-US, 26/26, 100%, missing 0
-de-DE, 0/26, 0%, missing 26
-it-IT, 0/26, 0%, missing 26
-fr-FR, 0/26, 0%, missing 26
-es-ES, 0/26, 0%, missing 26
-ru-RU, 26/26, 100%, missing 0
-zh-Hans, 0/26, 0%, missing 26
-pt-BR, 0/26, 0%, missing 26
-pl-PL, 0/26, 0%, missing 26
+en-US, 25/25, 100%, missing 0
+de-DE, 0/25, 0%, missing 25
+it-IT, 25/25, 100%, missing 0
+fr-FR, 0/25, 0%, missing 25
+es-ES, 0/25, 0%, missing 25
+ru-RU, 25/25, 100%, missing 0
+zh-Hans, 0/25, 0%, missing 25
+pt-BR, 0/25, 0%, missing 25
+pl-PL, 0/25, 0%, missing 25
