@@ -71,8 +71,6 @@ Mods: {
 					Tooltip: ""
 				}
 			}
-
-			Common.AcceptClientChanges: Solo il proprietario del mondo può cambiare la configurazione! Fallo in giocatore singolo.
 		}
 
 		Common: {
