@@ -71,8 +71,6 @@ Mods: {
 					Tooltip: ""
 				}
 			}
-
-			Common.AcceptClientChanges: Только владелец этого мира может менять настройки! Смените настройки в одиночной игре.
 		}
 
 		Common: {
