@@ -1,6 +1,6 @@
 author = direwolf420
 side = NoSync
-version = 1.3.0.1
+version = 1.3.0.2
 displayName = Better Autosave
 homepage = https://forums.terraria.org/index.php?threads/better-autosave.99817/
 hideCode = false
