@@ -15,3 +15,4 @@ Notes:
 Localization: If you want to add support for different languages, you are welcome to contribute localizations here: https://github.com/direwolf420/BetterAutosave
 List of localization contributors:
 * Russian: GodHybrid
+* Italian: Sea Noodle
